--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,6 @@
-:star: {asterisk}
-:all: {asterisk}{asterisk}
+[![Build Status](https://travis-ci.org/edwardmlyte/oauthdemo.svg?branch=master)](https://travis-ci.org/edwardmlyte/oauthdemo)
 
-= Note
+= Spring Boot OAuth Demo
 
 This repo is based on the `auth-server` module within `[sping-guides/tut-spring-boot-oauth2](https://github.com/spring-guides/tut-spring-boot-oauth2)`. Google authentication has been added.
 In short, to deploy the application, run `mvn spring:boot` and then hit `http://localhost:8080` to see it in action. 
